--- a/index.html
+++ b/index.html
@@ -42,7 +42,20 @@
         ________________
         </div> of debt.
       </div>
-      <div id = "clock" onload="currentTime()">
+      <div id=visualkey>
+        <div class=keytextbox id=redtextbox> <span>SUBSIDIZED</span>  <br> by federal government; does not accrue interest while in school   
+        </div>
+        <div class=colorbox id=red>
+        </div>
+        <div class=keytextbox id=greentextbox> <span>UNSUBSIDIZED</span> <br> by federal government; accrues interest while in school
+        </div>
+        <div class=colorbox id=green>
+        </div>
+        <div class=keytextbox id=bluetextbox><span>PRIVATE</span> <br> Loans taken out by my family to afford tuition payments 
+        </div>
+        <div class=colorbox id=blue>
+        </div>
+
       </div>
     </div>
 
@@ -533,7 +546,7 @@
       <div class="loans privateloan" id="mefa1">
         <h1>private loans </h1>
         <h3>$16,272.00 </h3>
-        <p> <span>INTEREST:</span> 4.250% </p>
+        <p> INTEREST: 4.250% </p>
       </div>
       
       <div class="loans subsidizedloan" id="AE">
@@ -551,7 +564,7 @@
       <div class="loans privateloan" id="mefa2">
         <h1>private loans </h1>
         <h3>$9,111.00 </h3>
-        <p> <span>INTEREST:</span> 4.250% </p>
+        <p> INTEREST: 4.250% </p>
       </div>
 
       <div class="loans subsidizedloan" id="AG">
